09-Feb-2016 Fixes #93. Feedback is now provided on the terminal when a package is successfully made.

08-Feb-2016 ======== Version 1.0.1b2 Release ========

08-Feb-2016 Fixes #132. Parsing C source files for header includes no longer tries to match whitespace between the quotes or angle brackets. Without that, any trailing inline comments containing quotes or angle brackets would be included in the regex match. (Assume header files containing spaces are the exception, rather than the rule.)

08-Feb-2016 Fixes #128. Added C.ProceduralHeaderFile abstract module class, which can be derived from to generate header files for a build. Properties that can be overridden are OutputFile (the header path), Contents (the contents of the header - the guard is automatically written), and GuardText (an optional override to the header inclusion guard, otherwise the basename of the header). The header is always generated as part of the bam build - it is not converted to IDE projects. Added test ProceduralHeaderTest1.

08-Feb-2016 Fixes #131. Parsing C source files for header includes now accepts both quotes and angle bracket syntax. Previously, only quoted paths were searched, since the assumption was that angle brackets were for system headers, and thus invariant.

08-Feb-2016 Fixes #130. BuildAMation already supports modules that implement the Bam.Core.IModuleGroup containing 'children' which are modules implementing the Bam.Core.IChildModule interface. This allowed dependencies to flow from parent to child. However, if a module implementing IChildModule, but with a different parent, was added as a dependency, it was ignored as a proper dependency (treated as just a child), resulting in an incorrect dependency graph. Parentage is now evaluated for all modules implementing IChildModule. The relevant case for this is when a procedurally generated header was added as a dependency on a source collection.
